--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "webpack-dev-server --open",
     "dev": "webpack-dev-server --open --config webpack.dev.js",
     "server": "node server.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --open --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
